--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "test": "echo \"No tests yet. :( && exit 1\"",
     "test:watch": "echo \"No tests yet. :( && exit 1\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.2",
+    "pug": "^2.0.0-rc.4"
+  },
   "devDependencies": {
+    "@types/express": "^4.11.1",
     "@types/node": "^9.4.5",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.5.1",
