--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "express": "^4.16.2",
     "helmet": "^3.11.0",
+    "mongoose": "^5.0.5",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
     "@types/node": "^9.4.5",
+    "@types/mongoose": "^5.0.2",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.5.1",
     "nodemon": "^1.14.12",
