--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "helmet": "^3.11.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.5",
+    "mongoose-simple-random": "^0.4.1",
     "pug": "^2.0.0-rc.4",
-    "wait.for": "^0.6.6"
+    "q": "^1.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/helmet": "^0.0.37",
     "@types/node": "^9.4.5",
     "@types/mongoose": "^5.0.2",
+    "@types/mongoose-simple-random": "^0.4.4",
     "@types/lodash": "^4.14.104",
+    "@types/q": "^1.0.7",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.5.1",
     "nodemon": "^1.14.12",
