--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
         "mongoose": "^5.0.5",
         "pug": "^2.0.0-rc.4",
         "q": "^1.5.1",
+        "@types/express": "^4.11.1",
+        "@types/helmet": "^0.0.37",
+        "@types/node": "^9.4.5",
+        "@types/mongoose": "^5.0.2",
+        "@types/lodash": "^4.14.104",
+        "@types/q": "^1.0.7",
+        "chokidar-cli": "^1.2.0",
+        "concurrently": "^3.5.1",
+        "nodemon": "^1.14.12",
+        "tslint": "^5.9.1",
         "typescript": "^2.7.1"
     },
     "devDependencies": {
