--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
         "test": "echo \"No tests yet. :( && exit 1\"",
         "test:watch": "echo \"No tests yet. :( && exit 1\""
     },
+    "engines": {
+        "node": "6.11.3",
+        "npm": "3.10.10",
+        "yarn": "1.3.2"
+    },
     "dependencies": {
         "express": "^4.16.2",
         "helmet": "^3.11.0",
